# miniCompEval

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  README.md  TableNode.hpp  TreeNode.cpp  TreeNode.hpp  createPNG.sh  main.cpp  parser.l  parser.y
.github/: start_docker.sh
.github/workflows/: cmake-single-platform.yml
.oldMess/: TreeNode.cpp  TreeNode.hpp
doc/: MiniJava_syntax.output  readme.md
include/: ARMv7.hpp  Evaluate.hpp  TableNode.hpp  Traverse.hpp  TreeNode.hpp
source/: ARMv7.cpp  AssemNode.cpp  EvalNode.cpp  Evaluate.cpp  LLVM.cpp  TreeNode.cpp  llvm.cpp  main.cpp  meval.cpp  mjavacllvm.cpp  parser.l  parser.y  util_assem.cpp  util_eval.cpp
test/: CMakeLists.txt  Dockerfile  comp.sh  readme.md  test_assem.sh  test_llvm.cpp  test_llvm.sh
test/ARMv7Out/: Makefile
test/CodeGen/: HanoiDemo.java  basicIf.java  loop.java  loop2.java  multiplePrintWAdd.java  simple.java  simplefor.java  singlePrint.java
test/Compiler/: basicIf.s  boolTest.java  boolTest.s  loop.java  loop.s  moreComplex.java  multiplePrint.java  multiplePrintNumber.java  multiplePrintWAdd.java  multiplePrintWExp.s  readme.md  simple.s  simpleMethodCall.java
test/CompilerOut/: loop.s  moreComplex.s  simple.s  simpleMethodCall.s  singlePrint.s
test/Interpreter/: HanoiExpected.txt  array_print.java  array_print_class_var.java  extends.java  extends2.java  graph.java  interpreter_runtime_error.java  loop2.java  loop3.java  multi_array.java  nested.java  readme.md
test/LLVM_IR/: HanoiDemo.bc  basicIf.bc  loop.bc  moreComplex.bc  multiplePrint.bc  multiplePrintNumber.bc  multiplePrintWAdd.bc  number.bc  simple.bc  simpleMethodCall.bc  simplefor.bc  singlePrint.bc
test/ParserError/: loopCheck.java
test/TypeError/: loopCheck.java  multiplePrintWExp.java
test/testcasesP1/: P1SampleProgram1.txt  P1SampleProgram4.txt  P1SampleProgram5.txt
test/testcasesP2/: loopCheck.java  simpleCheck.java
test/testcasesP3/: loop.java  moreComplex.java  moreComplex.s  multiplePrintNumber.java  multiplePrintWAdd.s  singlePrint.java
testcasesP1/: P1SampleProgram2.txt  P1SampleProgram3.txt
testcasesP3/: basicIf.java  multiplePrint.java  multiplePrint.s  multiplePrintNumber.s
